# moomoo

./: .gitignore  README.md  pyproject.toml
config/: example.toml  local.example.toml
src/ai_moomoo_trader/: audit.py  cli.py  config.py  models.py  position_manager.py  risk.py
src/ai_moomoo_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_moomoo_trader/ai/: __init__.py  scoring.py
src/ai_moomoo_trader/backtest/: __init__.py  simple.py
src/ai_moomoo_trader/brokers/: base.py  mock.py  moomoo_broker.py
src/ai_moomoo_trader/data/: sample_data.py
src/ai_moomoo_trader/strategies/: moving_average.py
tests/: test_ai_scoring.py  test_backtest.py  test_position_manager.py  test_risk.py  test_strategy.py
