[project]
name = "ai-moomoo-trader"
version = "0.1.0"
description = "Risk-first AI-assisted moomoo paper trading MVP"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
moomoo = ["moomoo-api>=10.0"]
test = ["pytest>=8.0"]

[project.scripts]
ai-trader = "ai_moomoo_trader.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
